# datasets

./: .cursorignore  .dockerignore  .gitignore  .opencommitignore  Justfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.dvc/: config
datasets/: images.dvc
docs/: dvc.md
scripts/: convert-everything-to-jpg.sh  jekyll_run.sh
